[project]
name = "pyrenew-hew"
version = "0.1.0"
description = "Models and infrastructure for forecasting COVID-19 and Flu hospitalizations using wastewater data with PyRenew"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  {name = "Damon Bayer", email = "xum8@cdc.gov"},
  {name = "Dylan H. Morris"},
  {name = "Subekshya Bidari"},
]


dependencies = [
    "pyrenew @ git+https://github.com/cdcgov/PyRenew/",
    "forecasttools @ git+https://github.com/cdcgov/forecasttools-py",
    "ipywidgets>=8.1.5",
    "pyyaml>=6.0.2",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.5",
    "polars>=1.5.0",
    "pypdf>=5.1.0",
    "pyarrow>=18.0.0",
    "pygit2>=1.17.0",
    "tomli-w>=1.1.0",
    "azuretools @ git+https://github.com/cdcgov/cfa-azuretools",
    "rich>=14.0.0",
    "dotenv>=0.9.9",
    "arviz",
    "polarbayes",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
  {include-group = "test"}
]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-mpl>=0.17.0"
]


[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["I", "E4", "E7", "E9", "F"]

[tool.pytest.ini_options]
testpaths = ["tests", "pipelines/tests"]

[tool.uv.sources]
arviz = { git = "https://github.com/arviz-devs/arviz.git" }
polarbayes = { git = "https://github.com/CDCgov/polarbayes.git" }
