[project]
name = "pyrenew-hew"
version = "0.1.0"
description = "Models and infrastructure for forecasting COVID-19 and Flu hospitalizations using wastewater data with PyRenew"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  {name = "Damon Bayer", email = "xum8@cdc.gov"},
  {name = "Dylan H. Morris"},
  {name = "Subekshya Bidari"},
  {name = "Jon Kislin", email = "qxk3@cdc.gov"}
]


dependencies = [
    "pyrenew",
    "forecasttools",
    "ipywidgets>=8.1.5",
    "pyyaml>=6.0.2",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.5",
    "polars>=1.36",
    "pypdf>=5.1.0",
    "pyarrow>=18.0.0",
    "pygit2>=1.17.0",
    "tomli-w>=1.1.0",
    "azuretools",
    "rich>=14.0.0",
    "dotenv>=0.9.9",
    "polarbayes",
    "dagster-azure>=0.27.4",
    "dagster-docker>=0.27.4",
    "dagster-postgres>=0.27.4",
    "dagster-webserver==1.12.2",
    "dagster==1.12.2",
    "cfa-dagster @ git+https://github.com/cdcgov/cfa-dagster.git",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
  {include-group = "test"}
]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-mpl>=0.17.0"
]


[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["I", "E4", "E7", "E9", "F", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests", "pipelines/tests"]

[tool.uv.sources]
polarbayes = { git = "https://github.com/CDCgov/polarbayes" }
pyrenew = { git = "https://github.com/CDCgov/PyRenew", rev = "v0.1.6" }
forecasttools = { git = "https://github.com/cdcgov/forecasttools-py" }
azuretools = { git = "https://github.com/cdcgov/cfa-azuretools" }
